[workspace]
resolver = "2"
members = [
    "crates/editor",
    "crates/core",
    "crates/ecs",
    "crates/math",
    "crates/window"
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.77"
version = "0.2.9"

[profile.release]
codegen-units = 1
debug = false
opt-level = 3
# panic = "unwind"
#lto = "fat"

[profile.dev]
# codegen-units = 16
opt-level = 0
lto = false
debug = true
incremental = true

[workspace.dependencies]
thiserror = "1.0"
env_logger = "0.11"
log = "0.4"
