[package]
name = "app"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
wgpu = "0.19"
raw-window-handle = "0.6"
env_logger = "0.11"
log = "0.4"