[package]
name = "engine"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "engine"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
nannou = "0.19"
nannou_egui = "0.19"
# nannou_egui use egui with 0.23 version
egui_dock = "0.8"