[package]
name = "render_core"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.25", default-features = false, features = ["rand"] }
num-traits = { version = "0.2", default-features = false }
palette = { version = "0.7", default-features = false, features = ["named"] }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }

[features]
default = ["std"]
libm = ["glam/libm", "num-traits/libm", "palette/libm" ]
serde = ["glam/serde", "palette/serializing"]
std = ["glam/std", "num-traits/std", "palette/std", "rand/std", "rand/std_rng"]