[package]
name = "umble"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
umble_core = { path = "../umble_core" }
wgpu = "0.19"
winit = "0.29"
geom = "0.2.3"
tokio = { version = "1.35", features = ["full"] }
instant = "0.1"
log = { version = "0.4.20", features = [] }