[package]
name = "umble_wgpu"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
image = { version = "0.24", optional = true }
instant = { version = "0.1.9", optional = true }
num_cpus = { version = "1", optional = true }
wgpu = "0.19"
#wgpu_upstream = { version = "0.17.1", package = "wgpu" }