[package]
name = "umble_wgpu"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
image = { version = "0.24", optional = true }
instant = { version = "0.1", optional = true }
num_cpus = { version = "1", optional = true }
wgpu_upstream = { version = "0.19", package = "wgpu" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35", features = ["full"]}

[features]
capturer = ["image", "instant", "num_cpus"]
replay = ["wgpu_upstream/replay"]
serde = ["wgpu_upstream/serde"]
spirv = ["wgpu_upstream/spirv"]
trace = ["wgpu_upstream/trace"]
webgl = ["wgpu_upstream/webgl"]