[package]
name = "window"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#winit = { version = "0.29", default-features = false, features = ["rwh_06"] }
#raw-window-handle = "0.6"
serde = "1.0"
env_logger = "0.11"
nannou = "0.19"